ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projetoso-ingress
spec:
  rules:
  - host: projetoso.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-service
            port:
              number: 80
